--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Third_Activity"
+        <activity
+            android:name=".Third_Activity"
             android:screenOrientation="landscape"></activity>
         <activity
             android:name=".Second_Activity"
